# final-project-ed

./: ML_Model.py  README.md  dwt_tool.py  predict_from_OHLCV.py  predict_from_dwt_csv.py  stock_gui.py
demos/: .env.example  A Guide to the FAIR Agentic Framework.docx  google_api_setup.md  pyproject.toml  requirements.txt  verify_setup.py
outputs/: AAPL_original_and_denoised.csv  APPL_original_and_denoised.csv  BEAM_20211101_20251201_original_and_denoised.csv  BEAM_20251101_20251201_original_and_denoised.csv  NVDA_20230101_20251201_original_and_denoised.csv  NVDA_20251101_20251201_original_and_denoised.csv  NVDA_20251115_20251201_original_and_denoised.csv  NVDA_20251125_20251201_original_and_denoised.csv  NVDA_MIN_MAX_original_and_denoised.csv  NVDA_original_and_denoised.csv  O_20000101_20251201_original_and_denoised.csv  SPY_original_and_denoised.csv
